o Restored Java 1.4 compat
git-svn-id: https://svn.apache.org/repos/asf/maven/plugins/trunk/maven-eclipse-plugin@728534 13f79535-47bb-0310-9956-ffa450edef68